# dan

./: .gitattributes  .gitignore  FEATURES.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yaml  publish.yaml
completion/bash/: dan-io.sh  dan.sh
completion/zsh/: dan-io.sh  dan.sh
dan/: __init__.py  __main__.py  cli.py  jinja.py  logging.py  make.py  testing.py  vscode.py
dan/autoconf/: __init__.py  project.py
dan/cli/: click.py  io.py  main.py  user.py  vscode.py
dan/cmake/: __init__.py  configure_file.py  project.py
dan/conan/: requirements.py
dan/config/: __init__.py  context.py
dan/core/: aiofiles.py  asyncio.py  cache.py  config.py  context.py  diagnostics.py  find.py  generator.py  include.py  makefile.py  osinfo.py  pathlib.py  progress.py  register.py  requirements.py  runners.py  settings.py  target.py  terminal.py  test.py  toolchains.py  typing.py  utils.py  version.py  win.py
dan/cxx/: __init__.py  base_toolchain.py  compile_commands.py  detect.py  ldd.py  msvc_toolchain.py  targets.py  toolchain.py  unix_toolchain.py  user.py
dan/io/: __init__.py  package.py  repositories.py
dan/pkgconfig/: __init__.py  package.py
dan/smc/: git.py  tar.py
dan/src/: base.py  git.py  github.py  tar.py
dan/utils/: __init__.py  net.py
examples/: dan-build.py  makefile.py
examples/cxx/: dan-build.py  makefile.py
examples/simple/: dan-build.py  makefile.py  source.jinja
pymake/: __init__.py  __main__.py  cli.py  context.py  jinja.py  logging.py  make.py  testing.py  vscode.py
pymake.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pymake/cmake/: __init__.py  configure_file.py
pymake/conan/: __init__.py  requirements.py
pymake/core/: aiofiles.py  asyncio.py  cache.py  errors.py  find.py  functools.py  generator.py  globals.py  include.py  local_package.py  logging.py  makefile.py  osinfo.py  pathlib.py  pm.py  register.py  requirements.py  runners.py  settings.py  target.py  test.py  utils.py  version.py  win.py
pymake/cxx/: __init__.py  clang_toolchain.py  compile_commands.py  detect.py  executable.py  gcc_toolchain.py  msvc_toolchain.py  targets.py  toolchain.py  unix_toolchain.py
pymake/io/: __init__.py  package.py  repositories.py
pymake/pkgconfig/: __init__.py  package.py
pymake/smc/: __init__.py  git.py  tar.py
tests/: __init__.py  makefile.py  test_cxx.py  test_cxx_errors.py  test_cxx_libraries.py  test_cxx_simple.py  test_cxx_simplelib.py  test_cxx_smc_catch2.py  test_cxx_src_catch2.py  test_python_errors.py  test_stdout.py
tests/cli/: __init__.py  test_main.py
tests/core/: test_asyncio_cached.py  test_cmdline2list.py  test_version.py
vscode/: CHANGELOG.md  README.md  package-lock.json  package.json
(+103 files in other folders)
